--- a/requirements.txt
+++ b/requirements.txt
@@ -20,13 +20,14 @@ azure-identity==1.24.0
 azure-keyvault-secrets==4.10.0
 azure-core==1.35.0
 
-# [NOVO] Azure SDK para AI Search (RAG)
+# Azure SDK para AI Search (RAG)
 azure-search-documents==11.4.0
 
 # Ferramentas e Utilitários
 PyGithub==2.7.0
 redis==6.4.0
 pathspec>=0.12.0
+PyYAML==6.0.1
 
 # --- Sub-dependências ---
 anyio==4.10.0
