--- a/workflows.yaml
+++ b/workflows.yaml
@@ -1,23 +1,47 @@
-relatorio_padrao_desenvolvimento_codigo:
-  description: "Analisa o padrao de desenvolvimento, refatora o código e agrupa os commits."
+relatorio_analise_de_design_de_codigo:
+  description: "Refatoração de código, aplicação de design patterns e implementação dos princípios SOLID."
   steps:
     - status_update: "refactoring_code"
       agent_function: "agents.agente_revisor.main"
       params:
-        tipo_analise: "aplicacao_melhores_praticas_e_organizar_commits"
+        tipo_analise: "aplicacao_mudancas_design"
     - status_update: "grouping_commits"
       agent_function: "agents.agente_revisor.main"
       params:
-        tipo_analise: "agrupamento_de_commits_melhores_praticas"
+        tipo_analise: "agrupamento"
 
-relatorio_teste_unitario:
-  description: "Cria testes unitários com base no relatório e os agrupa."
+relatorio_refatoracao_codigo:
+  description: "Analise focada em otimização de performance e na filosofia Clean Code."
   steps:
-    - status_update: "writing_unit_tests"
+    - status_update: "refactoring_code"
       agent_function: "agents.agente_revisor.main"
       params:
-        tipo_analise: "escrever_testes_e_organizar_commits"
-    - status_update: "grouping_tests"
+        tipo_analise: "aplicacao_refatoracao"
+    - status_update: "grouping_commits"
       agent_function: "agents.agente_revisor.main"
       params:
-        tipo_analise: "agrupamento_de_commits_testes"
+        tipo_analise: "agrupamento"
+
+relatorio_documentacao_codigo:
+  description: "Realiza uma revisão técnica aprofundada focada exclusivamente na qualidade e na completude da documentação do código-fonte, o que inclui docstrings, comentários inline e a capacidade do código de ser auto-documentado"
+  steps:
+    - status_update: "gerando_documentacao"
+      agent_function: "agents.agente_revisor.main"
+      params:
+        tipo_analise: "aplicacao_documentacao"
+    - status_update: "grouping_commits"
+      agent_function: "agents.agente_revisor.main"
+      params:
+        tipo_analise: "agrupamento"
+
+relatorio_avaliacao_terraform:
+  description: "O objetivo é identificar pontos de melhoria em quatro áreas críticas: manutenibilidade do código, postura de segurança, performance da infraestrutura e otimização de custos"
+  steps:
+    - status_update: "revisando_terraform"
+      agent_function: "agents.agente_revisor.main"
+      params:
+        tipo_analise: "aplicacao_terraform"
+    - status_update: "grouping_commits"
+      agent_function: "agents.agente_revisor.main"
+      params:
+        tipo_analise: "agrupamento"
