--- a/workflows.yaml
+++ b/workflows.yaml
@@ -42,3 +42,14 @@ relatorio_solid:
     - status_update: "agrupando_commits"
       params:
         tipo_analise: "agrupamento_commits"
+
+relatorio_teste_unitario:
+  description: "Refatoração de código, olhando somente para a cobertura de testes."
+  extensions: [".py"] 
+  steps:
+    - status_update: "aplicando_as_mudancas_apontadas"
+      params:
+        tipo_analise: "aplicacao_de_mudancas"
+    - status_update: "agrupando_commits"
+      params:
+        tipo_analise: "agrupamento_commits"
