--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ annotated-types==0.7.0
 
 # Comunicação com APIs
 openai==1.99.6
+anthropic==0.64.0
 requests==2.32.4
 httpx==0.28.1
 httpcore==1.0.9
