refactor: .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,33 +1,28 @@
-# Configuração do Azure Key Vault
-# URL do Azure Key Vault onde os segredos estão armazenados
-KEY_VAULT_URL=https://seu-keyvault.vault.azure.net/
+# Configurações do Azure Key Vault
+# URL do seu Azure Key Vault onde os segredos são armazenados
+KEY_VAULT_URL=https://<seu-vault>.vault.azure.net/
 
-# Configuração do Redis
+# Configurações do Redis
 # URL de conexão com o Redis para armazenamento de jobs
-REDIS_URL=redis://username:password@your-redis-host:6379
+# Formato: rediss://:<senha>@<host>:<porta>
+REDIS_URL=rediss://:<senha>@<host>:<porta>
 
-# Configuração do Azure OpenAI
-# Nome do modelo de embedding usado para RAG
-AZURE_OPENAI_EMBEDDING_MODEL_NAME=text-embedding-ada-002
+# Configurações do Azure AI Search (para RAG)
+# Endpoint do seu serviço Azure AI Search
+AI_SEARCH_ENDPOINT=https://<seu-search>.search.windows.net
 
-# Configuração do Azure AI Search
-# Endpoint do serviço Azure AI Search
-AI_SEARCH_ENDPOINT=https://seu-search-service.search.windows.net
 # Nome do índice no Azure AI Search
-AI_SEARCH_INDEX_NAME=seu-indice-de-politicas
+AI_SEARCH_INDEX_NAME=<nome-index>
 
-# Configuração de Autenticação Azure (para desenvolvimento local)
-# ID do tenant do Azure AD
-# AZURE_TENANT_ID=seu-tenant-id
-# ID do cliente da aplicação registrada no Azure AD
-# AZURE_CLIENT_ID=seu-client-id
-# Segredo do cliente da aplicação registrada no Azure AD
-# AZURE_CLIENT_SECRET=seu-client-secret
+# Nome do modelo de embeddings da OpenAI
+AZURE_OPENAI_EMBEDDING_MODEL_NAME=text-embedding-3-large
 
-# Observações:
-# 1. Em produção, a autenticação Azure é geralmente feita via Managed Identity
-# 2. Os seguintes segredos devem estar configurados no Key Vault:
-#    - openaiapi: Chave da API da OpenAI
-#    - ANTHROPICAPIKEY: Chave da API da Anthropic (Claude)
-#    - aisearchapi: Chave da API do Azure AI Search
-#    - githubapi: Token de acesso pessoal do GitHub
+# NOTA: Os segredos reais (tokens e chaves de API) são obtidos do Key Vault
+# e não devem ser definidos diretamente neste arquivo.
+# No Azure App Service, estes valores devem ser configurados em App Settings.
+#
+# Segredos necessários no Key Vault:
+# - githubapi: Token de acesso ao GitHub
+# - openaiapi: Chave da API da OpenAI
+# - aisearchapi: Chave da API do Azure AI Search
+# - ANTHROPICAPIKEY: Chave da API da Anthropic (opcional)
