--- a/workflows.yaml
+++ b/workflows.yaml
@@ -1,116 +1,62 @@
-relatorio_cleancode:
-  description: "Refatoração de código, olhando somente o clean code."
-  extensions: [".py"]
-  steps:
-    - status_update: "aplicando_as_mudancas_apontadas"
-      model_name: "gpt-4.1"
-      params:
-        tipo_analise: "aplicacao_de_mudancas"
-    - status_update: "agrupando_commits"
-      model_name: "gpt-4.1-mini"
-      params:
-        tipo_analise: "agrupamento_commits"
+# Configuração de workflows para o MCP Server
+# Este arquivo define os tipos de análise disponíveis e suas configurações
 
-relatorio_performance_eficiencia:
-  description: "Refatoração de código, olhando somente pontos de performance."
-  extensions: [".py"]
+# Workflow para auditoria de documentação
+auditoria_documentacao:
+  extensions: [".md", ".yml", ".yaml", ".txt"]
   steps:
-    - status_update: "aplicando_as_mudancas_apontadas"
-      model_name: "claude-3-7-sonnet-20250219"
+    - status_update: "gerando_relatorio_inicial"
       params:
-        tipo_analise: "aplicacao_de_mudancas"
-    - status_update: "agrupando_commits"
-      model_name: "gpt-4.1-mini"
-      params:
-        tipo_analise: "agrupamento_commits"
-
-relatorio_simplicacao_debito_tecnico:
-  description: "Refatoração de código, olhando somente pontos de debito tecnico."
-  extensions: [".py"]
-  steps:
-    - status_update: "aplicando_as_mudancas_apontadas"
-      model_name: "claude-3-7-sonnet-20250219"
-      params:
-        tipo_analise: "aplicacao_de_mudancas"
-    - status_update: "agrupando_commits"
-      model_name: "gpt-4.1-mini"
-      params:
-        tipo_analise: "agrupamento_commits"
-
-relatorio_solid:
-  description: "Refatoração de código, olhando somente os principios SOLID."
-  extensions: [".py"]
-  steps:
-    - status_update: "aplicando_as_mudancas_apontadas"
-      model_name: "claude-opus-4-20250514"
-      params:
-        tipo_analise: "aplicacao_de_mudancas"
-    - status_update: "agrupando_commits"
-      model_name: "gpt-4.1-mini"
-      params:
-        tipo_analise: "agrupamento_commits"
-
-relatorio_conformidades:
-  description: "Refatoração de código, garantindo que a coesão, a consistência e a estabilidade do código sejam mantidas."
-  extensions: [".py"]
-  steps:
-    - status_update: "aplicando_as_mudancas_apontadas"
-      model_name: "claude-opus-4-20250514"
-      params:
-        tipo_analise: "aplicacao_de_mudancas"
-    - status_update: "agrupando_commits"
-      model_name: "gpt-4.1-mini"
-      params:
-        tipo_analise: "agrupamento_commits"
-
-relatorio_teste_unitario:
-  description: "Refatoração de código, olhando somente para a cobertura de testes."
-  extensions: [".py"]
-  steps:
-    - status_update: "aplicando_as_mudancas_apontadas"
+        tipo_analise: "auditoria_documentacao"
+        max_token_out: 15000
       model_name: "gpt-4o"
+    - status_update: "agrupando_mudancas"
       params:
-        tipo_analise: "aplicacao_de_mudancas"
-    - status_update: "agrupando_commits"
-      model_name: "gpt-4.1-mini"
-      params:
-        tipo_analise: "agrupamento_commits"
+        tipo_analise: "agrupamento_mudancas"
+        max_token_out: 15000
+      model_name: "gpt-4o"
 
-relatorio_owasp:
-  description: "Refatoração de código, olhando somente para a segurança segundo OWSASP."
-  extensions: [".py"]
+# Workflow para refatoração de código
+refatoracao_codigo:
+  extensions: [".py", ".js", ".ts", ".java", ".cs", ".go"]
   steps:
-    - status_update: "aplicando_as_mudancas_apontadas"
-      model_name: "claude-3-7-sonnet-20250219"
+    - status_update: "gerando_plano_refatoracao"
       params:
-        tipo_analise: "aplicacao_de_mudancas"
-    - status_update: "agrupando_commits"
-      model_name: "gpt-4.1-mini"
+        tipo_analise: "refatoracao_codigo"
+        max_token_out: 15000
+      model_name: "gpt-4o"
+    - status_update: "agrupando_mudancas"
       params:
-        tipo_analise: "agrupamento_commits"
+        tipo_analise: "agrupamento_mudancas"
+        max_token_out: 15000
+      model_name: "gpt-4o"
 
-relatorio_docstring_comentario:
-  description: "Escrita de docstrings."
-  extensions: [".py"]
+# Workflow para análise de segurança
+analise_seguranca:
+  extensions: [".py", ".js", ".ts", ".java", ".cs", ".go", ".php", ".rb"]
   steps:
-    - status_update: "aplicando_as_mudancas_apontadas"
-      model_name: "claude-3-7-sonnet-20250219"
+    - status_update: "analisando_vulnerabilidades"
       params:
-        tipo_analise: "aplicacao_de_mudancas"
-    - status_update: "agrupando_commits"
-      model_name: "gpt-4.1-mini"
+        tipo_analise: "analise_seguranca"
+        max_token_out: 15000
+      model_name: "gpt-4o"
+    - status_update: "agrupando_mudancas"
       params:
-        tipo_analise: "agrupamento_commits"
+        tipo_analise: "agrupamento_mudancas"
+        max_token_out: 15000
+      model_name: "gpt-4o"
 
-relatorio_documentacao:
-  description: "Escrita de documentação do código."
-  extensions: [".py"]
+# Workflow para otimização de desempenho
+otimizacao_desempenho:
+  extensions: [".py", ".js", ".ts", ".java", ".cs", ".go", ".sql"]
   steps:
-    - status_update: "aplicando_as_mudancas_apontadas"
-      model_name: "claude-3-7-sonnet-20250219"
+    - status_update: "analisando_desempenho"
       params:
-        tipo_analise: "aplicacao_de_mudancas"
-    - status_update: "agrupando_commits"
-      model_name: "gpt-4.1-mini"
+        tipo_analise: "otimizacao_desempenho"
+        max_token_out: 15000
+      model_name: "gpt-4o"
+    - status_update: "agrupando_mudancas"
       params:
-        tipo_analise: "agrupamento_commits"
+        tipo_analise: "agrupamento_mudancas"
+        max_token_out: 15000
+      model_name: "gpt-4o"
