--- a/workflows.yaml
+++ b/workflows.yaml
@@ -2,12 +2,19 @@ relatorio_cleancode:
   description: "Refatoração de código, olhando somente o clean code."
   extensions: [".py"]
   steps:
+    - status_update: "analisando o repositório"
+      model_name: "gpt-4.1"
+      agent_type: "revisor"
+      params:
+        tipo_analise: "relatorio_cleancode"
     - status_update: "aplicando_as_mudancas_apontadas"
       model_name: "gpt-4.1"
+      agent_type: "revisor"
       params:
         tipo_analise: "aplicacao_de_mudancas"
     - status_update: "agrupando_commits"
       model_name: "gpt-4.1-mini"
+      agent_type: "processador"
       params:
         tipo_analise: "agrupamento_commits"
 
@@ -15,12 +22,19 @@ relatorio_performance_eficiencia:
   description: "Refatoração de código, olhando somente pontos de performance."
   extensions: [".py"]
   steps:
+    - status_update: "analisando o repositório"
+      model_name: "gpt-4.1"
+      agent_type: "revisor"
+      params:
+        tipo_analise: "relatorio_performance_eficiencia"
     - status_update: "aplicando_as_mudancas_apontadas"
       model_name: "claude-3-7-sonnet-20250219"
+      agent_type: "revisor"
       params:
         tipo_analise: "aplicacao_de_mudancas"
     - status_update: "agrupando_commits"
       model_name: "gpt-4.1-mini"
+      agent_type: "processador"
       params:
         tipo_analise: "agrupamento_commits"
 
@@ -28,12 +42,19 @@ relatorio_simplicacao_debito_tecnico:
   description: "Refatoração de código, olhando somente pontos de debito tecnico."
   extensions: [".py"]
   steps:
+    - status_update: "analisando o repositório"
+      model_name: "gpt-4.1"
+      agent_type: "revisor"
+      params:
+        tipo_analise: "relatorio_simplicacao_debito_tecnico"
     - status_update: "aplicando_as_mudancas_apontadas"
       model_name: "claude-3-7-sonnet-20250219"
+      agent_type: "revisor"
       params:
         tipo_analise: "aplicacao_de_mudancas"
     - status_update: "agrupando_commits"
       model_name: "gpt-4.1-mini"
+      agent_type: "processador"
       params:
         tipo_analise: "agrupamento_commits"
 
@@ -41,12 +62,19 @@ relatorio_solid:
   description: "Refatoração de código, olhando somente os principios SOLID."
   extensions: [".py"]
   steps:
+    - status_update: "analisando o repositório"
+      model_name: "gpt-4.1"
+      agent_type: "revisor"
+      params:
+        tipo_analise: "relatorio_solid"
     - status_update: "aplicando_as_mudancas_apontadas"
       model_name: "claude-opus-4-20250514"
+      agent_type: "revisor"
       params:
         tipo_analise: "aplicacao_de_mudancas"
     - status_update: "agrupando_commits"
       model_name: "gpt-4.1-mini"
+      agent_type: "processador"
       params:
         tipo_analise: "agrupamento_commits"
 
@@ -54,12 +82,19 @@ relatorio_conformidades:
   description: "Refatoração de código, garantindo que a coesão, a consistência e a estabilidade do código sejam mantidas."
   extensions: [".py"]
   steps:
+    - status_update: "analisando o repositório"
+      model_name: "gpt-4.1"
+      agent_type: "revisor"
+      params:
+        tipo_analise: "relatorio_conformidades"
     - status_update: "aplicando_as_mudancas_apontadas"
       model_name: "claude-opus-4-20250514"
+      agent_type: "revisor"
       params:
         tipo_analise: "aplicacao_de_mudancas"
     - status_update: "agrupando_commits"
       model_name: "gpt-4.1-mini"
+      agent_type: "processador"
       params:
         tipo_analise: "agrupamento_commits"
 
@@ -67,12 +102,19 @@ relatorio_teste_unitario:
   description: "Refatoração de código, olhando somente para a cobertura de testes."
   extensions: [".py"]
   steps:
+    - status_update: "analisando o repositório"
+      model_name: "gpt-4.1"
+      agent_type: "revisor"
+      params:
+        tipo_analise: "relatorio_teste_unitario"
     - status_update: "aplicando_as_mudancas_apontadas"
       model_name: "gpt-4o"
+      agent_type: "revisor"
       params:
         tipo_analise: "aplicacao_de_mudancas"
     - status_update: "agrupando_commits"
       model_name: "gpt-4.1-mini"
+      agent_type: "processador"
       params:
         tipo_analise: "agrupamento_commits"
 
@@ -80,12 +122,19 @@ relatorio_owasp:
   description: "Refatoração de código, olhando somente para a segurança segundo OWSASP."
   extensions: [".py"]
   steps:
+    - status_update: "analisando o repositório"
+      model_name: "gpt-4.1"
+      agent_type: "revisor"
+      params:
+        tipo_analise: "relatorio_owasp"
     - status_update: "aplicando_as_mudancas_apontadas"
       model_name: "claude-3-7-sonnet-20250219"
+      agent_type: "revisor"
       params:
         tipo_analise: "aplicacao_de_mudancas"
     - status_update: "agrupando_commits"
       model_name: "gpt-4.1-mini"
+      agent_type: "processador"
       params:
         tipo_analise: "agrupamento_commits"
 
@@ -93,12 +142,19 @@ relatorio_docstring_comentario:
   description: "Escrita de docstrings."
   extensions: [".py"]
   steps:
+    - status_update: "analisando o repositório"
+      model_name: "gpt-4.1"
+      agent_type: "revisor"
+      params:
+        tipo_analise: "relatorio_docstring_comentario"
     - status_update: "aplicando_as_mudancas_apontadas"
       model_name: "claude-3-7-sonnet-20250219"
+      agent_type: "revisor"
       params:
         tipo_analise: "aplicacao_de_mudancas"
     - status_update: "agrupando_commits"
       model_name: "gpt-4.1-mini"
+      agent_type: "processador"
       params:
         tipo_analise: "agrupamento_commits"
 
@@ -106,11 +162,18 @@ relatorio_documentacao:
   description: "Escrita de documentação do código."
   extensions: [".py"]
   steps:
+    - status_update: "analisando o repositório"
+      model_name: "gpt-4.1"
+      agent_type: "revisor"
+      params:
+        tipo_analise: "relatorio_documentacao"
     - status_update: "aplicando_as_mudancas_apontadas"
       model_name: "claude-3-7-sonnet-20250219"
+      agent_type: "revisor"
       params:
         tipo_analise: "aplicacao_de_mudancas"
     - status_update: "agrupando_commits"
       model_name: "gpt-4.1-mini"
+      agent_type: "processador"
       params:
         tipo_analise: "agrupamento_commits"
