--- a/workflows.yaml
+++ b/workflows.yaml
@@ -198,4 +198,25 @@ geracao_codigo_a_partir_de_reuniao:
       agent_type: "processador"
       params:
         tipo_analise: "agrupamento_commits"
+
+relatorio_implentacao_feature:
+  description: "Refatoração de código, olhando somente o clean code."
+  extensions: [".py"]
+  steps:
+    - status_update: "analisando o repositório"
+      model_name: "gpt-4.1"
+      agent_type: "revisor"
+      params:
+        tipo_analise: "relatorio_implentacao_feature"
+    - status_update: "aplicando_as_mudancas_apontadas"
+      model_name: "gpt-4.1"
+      agent_type: "revisor"
+      params:
+        tipo_analise: "aplicacao_de_mudancas"
+        max_token_out: 30000
+    - status_update: "agrupando_commits"
+      model_name: "gpt-4.1-mini"
+      agent_type: "processador"
+      params:
+        tipo_analise: "agrupamento_commits"
         
