refactor: .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,33 +1,7 @@
-# Configuração do Azure Key Vault
-# URL do Azure Key Vault onde os segredos estão armazenados
-KEY_VAULT_URL=https://seu-keyvault.vault.azure.net/
-
-# Configuração do Redis
-# URL de conexão com o Redis para armazenamento de jobs
-REDIS_URL=redis://username:password@your-redis-host:6379
-
-# Configuração do Azure OpenAI
-# Nome do modelo de embedding usado para RAG
+KEY_VAULT_URL=https://<nome-do-key-vault>.vault.azure.net/
+AZURE_OPENAI_MODELS=https://<endpoint-do-azure-openai>.openai.azure.com/
 AZURE_OPENAI_EMBEDDING_MODEL_NAME=text-embedding-ada-002
-
-# Configuração do Azure AI Search
-# Endpoint do serviço Azure AI Search
-AI_SEARCH_ENDPOINT=https://seu-search-service.search.windows.net
-# Nome do índice no Azure AI Search
-AI_SEARCH_INDEX_NAME=seu-indice-de-politicas
-
-# Configuração de Autenticação Azure (para desenvolvimento local)
-# ID do tenant do Azure AD
-# AZURE_TENANT_ID=seu-tenant-id
-# ID do cliente da aplicação registrada no Azure AD
-# AZURE_CLIENT_ID=seu-client-id
-# Segredo do cliente da aplicação registrada no Azure AD
-# AZURE_CLIENT_SECRET=seu-client-secret
-
-# Observações:
-# 1. Em produção, a autenticação Azure é geralmente feita via Managed Identity
-# 2. Os seguintes segredos devem estar configurados no Key Vault:
-#    - openaiapi: Chave da API da OpenAI
-#    - ANTHROPICAPIKEY: Chave da API da Anthropic (Claude)
-#    - aisearchapi: Chave da API do Azure AI Search
-#    - githubapi: Token de acesso pessoal do GitHub
+AZURE_DEFAULT_DEPLOYMENT_NAME=gpt-4-turbo
+AI_SEARCH_ENDPOINT=https://<endpoint-do-azure-search>.search.windows.net
+AI_SEARCH_INDEX_NAME=policy-index
+REDIS_URL=redis://:<senha>@<host>:<porta>/0
